// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Monthpicker /> allows specifiyng the primary and secondary colors 1`] = `
.c5 {
  cursor: pointer;
  fill: red;
}

.c3 {
  cursor: pointer;
  fill: white;
  fill: red;
}

.c1 {
  margin-top: 8px;
  -webkit-transform-origin: top center;
  -ms-transform-origin: top center;
  transform-origin: top center;
  -webkit-animation: dXhcnZ .2s;
  animation: dXhcnZ .2s;
  position: absolute;
  box-shadow: 0 1px 3px #d3d3d380,0 1px 3px #d3d3d380;
  border: 1px solid green;
  border-radius: 4px;
  z-index: 10;
}

.c8 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: red;
  color: green;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c8:hover {
  background-color: #d3d3d330;
}

.c8:focus {
  outline: none;
}

.c9 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: red;
  color: green;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
  border-bottom-left-radius: 4px;
}

.c9:hover {
  background-color: #d3d3d330;
}

.c9:focus {
  outline: none;
}

.c10 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: red;
  color: green;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
  border-bottom-right-radius: 4px;
}

.c10:hover {
  background-color: #d3d3d330;
}

.c10:focus {
  outline: none;
}

.c2 {
  padding: 16px 8px;
  font-weight: bold;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: green;
  color: red;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 * {
  box-sizing: border-box;
}

.c0:focus {
  outline: none;
}

.c7 {
  background-color: red;
  border-radius: 4px;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  height: 8px;
  background-color: red;
  width: 100%;
}

<MonthPicker
  hoverColor="#d3d3d330"
  locale="de"
  month={1}
  onChange={[MockFunction]}
  primaryColor="green"
  secondaryColor="red"
  year={2018}
>
  <styled.div
    innerRef={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <div
      className="c0"
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <div
        onClick={[Function]}
      >
        <div
          className="child"
        >
          Child
        </div>
      </div>
      <styled.div
        hoverColor="#d3d3d330"
        primaryColor="green"
        secondaryColor="red"
      >
        <div
          className="c1"
        >
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="green"
            secondaryColor="red"
          >
            <div
              className="c2"
            >
              <Component
                hoverColor="#d3d3d330"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
              >
                <styled.svg
                  height="24"
                  hoverColor="#d3d3d330"
                  onClick={[Function]}
                  primaryColor="green"
                  secondaryColor="red"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="c3"
                    height="24"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                    <path
                      d="M0-.5h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </styled.svg>
              </Component>
              <styled.span>
                <span
                  className="c4"
                >
                  2018
                </span>
              </styled.span>
              <Component
                hoverColor="#d3d3d330"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
              >
                <styled.svg
                  height="24"
                  hoverColor="#d3d3d330"
                  onClick={[Function]}
                  primaryColor="green"
                  secondaryColor="red"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="c5"
                    height="24"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                    <path
                      d="M0-.25h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </styled.svg>
              </Component>
            </div>
          </styled.div>
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="green"
            secondaryColor="red"
          >
            <div
              className="c6"
            />
          </styled.div>
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="green"
            secondaryColor="red"
          >
            <div
              className="c7"
            >
              <styled.div
                hoverColor="#d3d3d330"
                index={0}
                key="M01"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M01
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={1}
                key="M02"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M02
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={2}
                key="M03"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M03
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={3}
                key="M04"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M04
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={4}
                key="M05"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M05
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={5}
                key="M06"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M06
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={6}
                key="M07"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M07
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={7}
                key="M08"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M08
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={8}
                key="M09"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M09
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={9}
                key="M10"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c9"
                  onClick={[Function]}
                  selected={0}
                >
                  M10
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={10}
                key="M11"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M11
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={11}
                key="M12"
                onClick={[Function]}
                primaryColor="green"
                secondaryColor="red"
                selected={0}
              >
                <div
                  className="c10"
                  onClick={[Function]}
                  selected={0}
                >
                  M12
                </div>
              </styled.div>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</MonthPicker>
`;

exports[`<Monthpicker /> event handling:  closes the overlay when clicking anywhere outside the overlay 1`] = `
.c0 * {
  box-sizing: border-box;
}

.c0:focus {
  outline: none;
}

<MonthPicker
  hoverColor="#d3d3d330"
  locale="de"
  month={1}
  onChange={[MockFunction]}
  primaryColor="#27718c"
  secondaryColor="white"
  year={2010}
>
  <styled.div
    innerRef={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <div
      className="c0"
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <div
        onClick={[Function]}
      >
        <div
          className="child"
        >
          Child
        </div>
      </div>
    </div>
  </styled.div>
</MonthPicker>
`;

exports[`<Monthpicker /> event handling:  opens the overlay when clicking on the child 1`] = `
.c5 {
  cursor: pointer;
  fill: white;
}

.c3 {
  cursor: pointer;
  fill: white;
  fill: white;
}

.c1 {
  margin-top: 8px;
  -webkit-transform-origin: top center;
  -ms-transform-origin: top center;
  transform-origin: top center;
  -webkit-animation: dXhcnZ .2s;
  animation: dXhcnZ .2s;
  position: absolute;
  box-shadow: 0 1px 3px #d3d3d380,0 1px 3px #d3d3d380;
  border: 1px solid #27718c;
  border-radius: 4px;
  z-index: 10;
}

.c8 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c8:hover {
  background-color: #d3d3d330;
}

.c8:focus {
  outline: none;
}

.c9 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
  border-bottom-left-radius: 4px;
}

.c9:hover {
  background-color: #d3d3d330;
}

.c9:focus {
  outline: none;
}

.c10 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
  border-bottom-right-radius: 4px;
}

.c10:hover {
  background-color: #d3d3d330;
}

.c10:focus {
  outline: none;
}

.c2 {
  padding: 16px 8px;
  font-weight: bold;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #27718c;
  color: white;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 * {
  box-sizing: border-box;
}

.c0:focus {
  outline: none;
}

.c7 {
  background-color: white;
  border-radius: 4px;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  height: 8px;
  background-color: white;
  width: 100%;
}

<MonthPicker
  hoverColor="#d3d3d330"
  locale="de"
  month={1}
  onChange={[MockFunction]}
  primaryColor="#27718c"
  secondaryColor="white"
  year={2010}
>
  <styled.div
    innerRef={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <div
      className="c0"
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <div
        onClick={[Function]}
      >
        <div
          className="child"
        >
          Child
        </div>
      </div>
      <styled.div
        hoverColor="#d3d3d330"
        primaryColor="#27718c"
        secondaryColor="white"
      >
        <div
          className="c1"
        >
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="#27718c"
            secondaryColor="white"
          >
            <div
              className="c2"
            >
              <Component
                hoverColor="#d3d3d330"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
              >
                <styled.svg
                  height="24"
                  hoverColor="#d3d3d330"
                  onClick={[Function]}
                  primaryColor="#27718c"
                  secondaryColor="white"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="c3"
                    height="24"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                    <path
                      d="M0-.5h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </styled.svg>
              </Component>
              <styled.span>
                <span
                  className="c4"
                >
                  2010
                </span>
              </styled.span>
              <Component
                hoverColor="#d3d3d330"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
              >
                <styled.svg
                  height="24"
                  hoverColor="#d3d3d330"
                  onClick={[Function]}
                  primaryColor="#27718c"
                  secondaryColor="white"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="c5"
                    height="24"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                    <path
                      d="M0-.25h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </styled.svg>
              </Component>
            </div>
          </styled.div>
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="#27718c"
            secondaryColor="white"
          >
            <div
              className="c6"
            />
          </styled.div>
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="#27718c"
            secondaryColor="white"
          >
            <div
              className="c7"
            >
              <styled.div
                hoverColor="#d3d3d330"
                index={0}
                key="M01"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M01
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={1}
                key="M02"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M02
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={2}
                key="M03"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M03
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={3}
                key="M04"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M04
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={4}
                key="M05"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M05
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={5}
                key="M06"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M06
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={6}
                key="M07"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M07
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={7}
                key="M08"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M08
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={8}
                key="M09"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M09
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={9}
                key="M10"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c9"
                  onClick={[Function]}
                  selected={0}
                >
                  M10
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={10}
                key="M11"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  M11
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={11}
                key="M12"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c10"
                  onClick={[Function]}
                  selected={0}
                >
                  M12
                </div>
              </styled.div>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</MonthPicker>
`;

exports[`<Monthpicker /> renders its children 1`] = `
<styled.div
  innerRef={[Function]}
  onKeyDown={[Function]}
  tabIndex={-1}
>
  <div
    onClick={[Function]}
  >
    Child
  </div>
</styled.div>
`;

exports[`<Monthpicker /> works with different locales 1`] = `
.c5 {
  cursor: pointer;
  fill: white;
}

.c3 {
  cursor: pointer;
  fill: white;
  fill: white;
}

.c1 {
  margin-top: 8px;
  -webkit-transform-origin: top center;
  -ms-transform-origin: top center;
  transform-origin: top center;
  -webkit-animation: dXhcnZ .2s;
  animation: dXhcnZ .2s;
  position: absolute;
  box-shadow: 0 1px 3px #d3d3d380,0 1px 3px #d3d3d380;
  border: 1px solid #27718c;
  border-radius: 4px;
  z-index: 10;
}

.c8 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
}

.c8:hover {
  background-color: #d3d3d330;
}

.c8:focus {
  outline: none;
}

.c9 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
  border-bottom-left-radius: 4px;
}

.c9:hover {
  background-color: #d3d3d330;
}

.c9:focus {
  outline: none;
}

.c10 {
  cursor: pointer;
  padding: 12px 0;
  -webkit-transition: background-color .1s,color .1s;
  transition: background-color .1s,color .1s;
  font-size: 14px;
  background-color: white;
  color: #27718c;
  height: 42px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 33.33%;
  -ms-flex: 0 0 33.33%;
  flex: 0 0 33.33%;
  border-bottom-right-radius: 4px;
}

.c10:hover {
  background-color: #d3d3d330;
}

.c10:focus {
  outline: none;
}

.c2 {
  padding: 16px 8px;
  font-weight: bold;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #27718c;
  color: white;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 * {
  box-sizing: border-box;
}

.c0:focus {
  outline: none;
}

.c7 {
  background-color: white;
  border-radius: 4px;
  width: 300px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c6 {
  height: 8px;
  background-color: white;
  width: 100%;
}

<MonthPicker
  hoverColor="#d3d3d330"
  locale="en"
  month={1}
  onChange={[MockFunction]}
  primaryColor="#27718c"
  secondaryColor="white"
  year={2018}
>
  <styled.div
    innerRef={[Function]}
    onKeyDown={[Function]}
    tabIndex={-1}
  >
    <div
      className="c0"
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <div
        onClick={[Function]}
      >
        <div
          className="child"
        >
          Child
        </div>
      </div>
      <styled.div
        hoverColor="#d3d3d330"
        primaryColor="#27718c"
        secondaryColor="white"
      >
        <div
          className="c1"
        >
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="#27718c"
            secondaryColor="white"
          >
            <div
              className="c2"
            >
              <Component
                hoverColor="#d3d3d330"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
              >
                <styled.svg
                  height="24"
                  hoverColor="#d3d3d330"
                  onClick={[Function]}
                  primaryColor="#27718c"
                  secondaryColor="white"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="c3"
                    height="24"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M15.41 16.09l-4.58-4.59 4.58-4.59L14 5.5l-6 6 6 6z"
                    />
                    <path
                      d="M0-.5h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </styled.svg>
              </Component>
              <styled.span>
                <span
                  className="c4"
                >
                  2018
                </span>
              </styled.span>
              <Component
                hoverColor="#d3d3d330"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
              >
                <styled.svg
                  height="24"
                  hoverColor="#d3d3d330"
                  onClick={[Function]}
                  primaryColor="#27718c"
                  secondaryColor="white"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    className="c5"
                    height="24"
                    onClick={[Function]}
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z"
                    />
                    <path
                      d="M0-.25h24v24H0z"
                      fill="none"
                    />
                  </svg>
                </styled.svg>
              </Component>
            </div>
          </styled.div>
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="#27718c"
            secondaryColor="white"
          >
            <div
              className="c6"
            />
          </styled.div>
          <styled.div
            hoverColor="#d3d3d330"
            primaryColor="#27718c"
            secondaryColor="white"
          >
            <div
              className="c7"
            >
              <styled.div
                hoverColor="#d3d3d330"
                index={0}
                key="Jan"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Jan
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={1}
                key="Feb"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Feb
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={2}
                key="Mar"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Mar
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={3}
                key="Apr"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Apr
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={4}
                key="May"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  May
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={5}
                key="Jun"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Jun
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={6}
                key="Jul"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Jul
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={7}
                key="Aug"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Aug
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={8}
                key="Sep"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Sep
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={9}
                key="Oct"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c9"
                  onClick={[Function]}
                  selected={0}
                >
                  Oct
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={10}
                key="Nov"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c8"
                  onClick={[Function]}
                  selected={0}
                >
                  Nov
                </div>
              </styled.div>
              <styled.div
                hoverColor="#d3d3d330"
                index={11}
                key="Dec"
                onClick={[Function]}
                primaryColor="#27718c"
                secondaryColor="white"
                selected={0}
              >
                <div
                  className="c10"
                  onClick={[Function]}
                  selected={0}
                >
                  Dec
                </div>
              </styled.div>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</MonthPicker>
`;
